Separate python interface c parser code from generic c code

--- a/ho/CMakeLists.txt
+++ b/ho/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(ho STATIC hit_object.c)
+add_library(ho STATIC hit_object.c ho_py.c)
 target_link_libraries(ho python2.7)
 
 install(FILES omp_ho.py DESTINATION scripts/python)
