--- a/map/CMakeLists.txt
+++ b/map/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(osumap STATIC ${map_src})
 target_link_libraries(osumap ho tp coco)
 
 set(parser_src
-  parser.c  
+  parser.c parser_py.c# parser_c.c
   )
 
 add_library(parser STATIC ${parser_src})
@@ -18,5 +18,4 @@ target_link_libraries(reader parser osumap)
 
 install(TARGETS reader DESTINATION .) 
 install(DIRECTORY osufiles DESTINATION .)
-
-install(FILES omp.py DESTINATION scripts/python)
+install(FILES py/omp.py DESTINATION scripts/python)
