Organize taiko ranking files.

--- a/map/CMakeLists.txt
+++ b/map/CMakeLists.txt
@@ -17,6 +17,6 @@ add_executable(reader reader/main.c)
 target_link_libraries(reader parser osumap)
 
 install(TARGETS reader DESTINATION .) 
-install(DIRECTORY osufiles DESTINATION .)
+## install(DIRECTORY osufiles DESTINATION .)
 
 install(FILES omp.py DESTINATION scripts/python)
