--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,7 @@ include_directories(. util include)
 
 add_subdirectory(util)
 
-add_subdirectory(hs)
-add_subdirectory(ho)
-add_subdirectory(tp)
-add_subdirectory(sb)
 add_subdirectory(replay)
-add_subdirectory(combocolor)
-
-add_subdirectory(map)
-
-add_subdirectory(taikorank)
+add_subdirectory(beatmap)
+add_subdirectory(ranking)
+add_subdirectory(editor)
