--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_C_FLAGS "-std=gnu11 -Wall")
 include_directories(. util include)
 
 add_subdirectory(util)
-
+add_subdirectory(embed)
 add_subdirectory(replay)
 add_subdirectory(beatmap)
 add_subdirectory(ranking)
