--- a/beatmap/CMakeLists.txt
+++ b/beatmap/CMakeLists.txt
@@ -1,22 +1,12 @@
+add_subdirectory(hitobject)
+add_subdirectory(timingpoint)
+add_subdirectory(combocolor)
 
-set(map_src
-  map.c
-  )
+add_library(beatmap SHARED beatmap.c)
+target_link_libraries(beatmap hitobject timingpoint combocolor)
 
-add_library(osumap STATIC ${map_src})
-target_link_libraries(osumap ho tp coco)
+add_subdirectory(parser)
 
-set(parser_src
-  parser.c parser_py.c# parser_c.c
-  )
-
-add_library(parser STATIC ${parser_src})
-target_link_libraries(parser osumap python2.7)
-
-add_executable(reader reader/main.c)
-target_link_libraries(reader parser osumap)
-
-install(TARGETS reader DESTINATION .) 
 # install(DIRECTORY osufiles DESTINATION .)
 
 install(FILES py/omp.py DESTINATION scripts/python)
