--- a/beatmap/combocolor/CMakeLists.txt
+++ b/beatmap/combocolor/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(coco STATIC combocolor.c)
-target_link_libraries(coco python2.7)
+add_library(combocolor SHARED combocolor.c)
+target_link_libraries(combocolor python2.7)
 
 install(FILES omp_coco.py DESTINATION scripts/python)
