--- a/beatmap/hitobject/CMakeLists.txt
+++ b/beatmap/hitobject/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(ho STATIC hit_object.c ho_py.c)
-target_link_libraries(ho python2.7)
+add_library(hitobject SHARED hit_object.c pyhitobject.c)
+target_link_libraries(hitobject python2.7)
 
 install(FILES omp_ho.py DESTINATION scripts/python)
