--- a/beatmap/timingpoint/CMakeLists.txt
+++ b/beatmap/timingpoint/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(tp STATIC timing_point.c tp_py.c)
-target_link_libraries(tp python2.7)
+add_library(timingpoint SHARED timing_point.c pytimingpoint.c)
+target_link_libraries(timingpoint python2.7)
 
 install(FILES omp_tp.py DESTINATION scripts/python)
