--- a/beatmap/parser/pyparser/CMakeLists.txt
+++ b/beatmap/parser/pyparser/CMakeLists.txt
@@ -4,3 +4,5 @@ add_library(pyparser SHARED pyparser.c)
 # temporary --> custom dynamic loader
 
 target_link_libraries(pyparser beatmap embed_python)
+
+install(FILES omp.py DESTINATION scripts/python)
