--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(osux)
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
 set(CMAKE_C_FLAGS "-std=gnu11 -Wall")
 
+set(CMAKE_INSTALL_RPATH "./lib")
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN/lib/")
+
 include_directories(. util include)
 
 add_subdirectory(util)
@@ -13,3 +16,4 @@ add_subdirectory(replay)
 add_subdirectory(beatmap)
 add_subdirectory(ranking)
 add_subdirectory(editor)
+add_subdirectory(storyboard)
