--- a/beatmap/parser/pyparser/CMakeLists.txt
+++ b/beatmap/parser/pyparser/CMakeLists.txt
@@ -1,6 +1,7 @@
 #add_library(pyparser MODULE pyparser.c)
 
 add_library(pyparser SHARED pyparser.c)
+install(TARGETS pyparser DESTINATION lib)
 # temporary --> custom dynamic loader
 
 target_link_libraries(pyparser beatmap embed_python)
