--- a/beatmap/hitobject/CMakeLists.txt
+++ b/beatmap/hitobject/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(hitobject SHARED hit_object.c pyhitobject.c)
 target_link_libraries(hitobject python2.7)
+install(TARGETS hitobject DESTINATION lib)
 
 install(FILES omp_ho.py DESTINATION scripts/python)
