--- a/beatmap/parser/pyparser/CMakeLists.txt
+++ b/beatmap/parser/pyparser/CMakeLists.txt
@@ -1,9 +1,10 @@
 #add_library(pyparser MODULE pyparser.c)
 
-add_library(pyparser SHARED pyparser.c)
-install(TARGETS pyparser DESTINATION lib)
-# temporary --> custom dynamic loader
+add_library(pyparser SHARED
+  pyfetch.c
+  )
 
 target_link_libraries(pyparser beatmap embed_python)
 
-install(FILES omp.py DESTINATION scripts/python)
+install(TARGETS pyparser DESTINATION lib)
+install(FILES osux_parse.py DESTINATION scripts/python)
