Move yaml2 to utils. Add CMakeLists for yaml2.

--- a/util/list/CMakeLists.txt
+++ b/util/list/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_library(list STATIC list.c)
+include_directories(.)
+
+#add_library(list STATIC list.c)
+add_library(list SHARED list.c)
+install(TARGETS list DESTINATION lib)
