--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,5 +1,8 @@
+include_directories(. hashtable list string heap scripts yaml)
+
 add_subdirectory(hashtable)
 add_subdirectory(list)
 add_subdirectory(string)
 add_subdirectory(heap)
 add_subdirectory(scripts)
+add_subdirectory(yaml)
