--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,8 +1,10 @@
-include_directories(. hashtable list string heap scripts yaml)
+include_directories(. hashtable list string heap sum scripts yaml)
 
 add_subdirectory(hashtable)
 add_subdirectory(list)
 add_subdirectory(string)
 add_subdirectory(heap)
+add_subdirectory(sum)
 add_subdirectory(scripts)
 add_subdirectory(yaml)
+
