ajout makefile pour replay

--- a/util/yaml/CMakeLists.txt
+++ b/util/yaml/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(yaml2_src yaml2.c stack.c yaml_scan.c)
+set(yaml2_src yaml2.c stack.c)
 
 add_library(yaml2 SHARED ${yaml2_src})
 target_link_libraries(yaml2 hashtable list yaml)
