mise en forme replay

--- a/replay/CMakeLists.txt
+++ b/replay/CMakeLists.txt
@@ -1,3 +1,12 @@
-add_library(replay STATIC replay.c)
+set(replay_src
+	replay.c
+	replay.h
+	xz_decomp.c
+	xz_decomp.h
+        mono.c
+	)
+
+add_library(replay SHARED ${replay_src})
+target_link_libraries(replay general)
 
 
