--- a/replay/CMakeLists.txt
+++ b/replay/CMakeLists.txt
@@ -6,6 +6,7 @@ set(replay_src
 	)
 
 add_library(replay SHARED ${replay_src})
-target_link_libraries(replay general)
+target_link_libraries(replay mod lzma string)
+install(TARGETS replay DESTINATION lib)
 
 
