--- a/util/list/CMakeLists.txt
+++ b/util/list/CMakeLists.txt
@@ -2,4 +2,5 @@ include_directories(.)
 
 #add_library(list STATIC list.c)
 add_library(list SHARED list.c)
+target_link_libraries(list hashtable)
 install(TARGETS list DESTINATION lib)
