--- a/util/string/CMakeLists.txt
+++ b/util/string/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-
 set(library_src	split.c)
-add_library(string STATIC ${library_src})
-
+add_library(string SHARED ${library_src})
+target_link_libraries(string list)
+install(TARGETS string DESTINATION lib)
