--- a/ranking/taikorank/CMakeLists.txt
+++ b/ranking/taikorank/CMakeLists.txt
@@ -22,8 +22,7 @@ set(tr_src
   )
 
 add_executable(taiko_ranking ${tr_src})
-
-target_link_libraries(taiko_ranking parser m heap hashtable sum yaml2 mysqlclient)
+target_link_libraries(taiko_ranking parser m util mysqlclient)
 
 include_directories(. compute_star)
 
