--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,10 +1,23 @@
-include_directories(. hashtable list string heap sum scripts yaml)
-
-add_subdirectory(hashtable)
-add_subdirectory(list)
-add_subdirectory(string)
-add_subdirectory(heap)
-add_subdirectory(sum)
 add_subdirectory(scripts)
-add_subdirectory(yaml)
+include_directories(scripts)
 
+set(util_src
+	hash_table.c
+	hash_table.h
+	list.c
+	list.h
+	split.c
+	split.h
+	heap.c
+	heap.h
+	sum.c
+	sum.h
+	yaml2.c
+	yaml2.h
+	stack.c
+	stack.h
+	)
+
+add_library(util SHARED ${util_src})
+target_link_libraries(util yaml)
+install(TARGETS util DESTINATION lib)
