--- a/ranking/taikorank/yaml/config.yaml
+++ b/ranking/taikorank/yaml/config.yaml
@@ -1,7 +1,8 @@
-# 
-print_tro:   0
-print_yaml:  0
-print_order: FDRPA
+print_tro:  0
+print_yaml: 0
+# 0 -> none
+# 1 -> map
+print_order: FDP
 # F -> final
 # D -> density
 # R -> reading
@@ -9,14 +10,14 @@ print_order: FDRPA
 # A -> accuracy
 
 # Database
-database:    0
+database:  0
 db_ip:     localhost
 db_login:  root
-db_passwd: nope
+db_passwd: NOPE
 
 # Score
 score: 0
-score_acc: 0.95
+score_acc: 100
 score_method: 0
 # 0 -> hardest
 # 1 -> best influence
