--- a/ranking/taikorank/yaml/reading_cst.yaml
+++ b/ranking/taikorank/yaml/reading_cst.yaml
@@ -9,25 +9,21 @@ vect_scale_y2: 10.
 superpos_big:   1.41 #sqrt(2)
 superpos_small: 1.
 
-# hiding
-hide_max: 10000.
-hide_exp: 500.
-
-# slow
+# hide
 # x is in ms
-vect_slow_length: 2
-vect_slow_x1: 100.   # human reaction time ~2500bpm app = 100ms
-vect_slow_y1: 0.
-vect_slow_x2: 60000. # max slow considered
-vect_slow_y2: 1000.
+vect_hide_length: 2
+vect_hide_x1: 0.
+vect_hide_y1: 0.
+vect_hide_x2: 50000.
+vect_hide_y2: 1000.
 
 # fast
-# x is in bpm app
+# x is in ms
 vect_fast_length: 2
 vect_fast_x1: 0.
-vect_fast_y1: 0.
-vect_fast_x2: 2500.
-vect_fast_y2: 1000.
+vect_fast_y1: 1000.
+vect_fast_x2: 5000.
+vect_fast_y2: 0.
 
 # speed change
 speed_ch_max:     1000000
@@ -39,5 +35,4 @@ star_superpos: 0
 star_hide:     0   
 star_hidden:   0   
 star_speed_ch: 0   
-star_slow:     1.
 star_fast:     1.
