--- a/beatmap/parser/CMakeLists.txt
+++ b/beatmap/parser/CMakeLists.txt
@@ -1,13 +1,16 @@
 
-add_subdirectory(pyparser)
-add_subdirectory(cparser)
+add_library(pyparser OBJECT pyfetch.c pyfetch.h)
+add_library(cparser OBJECT cparse.c cparse.h cfetch.c cfetch.c)
 
-add_library(parser SHARED parser.c)
-#TEMPORARY:
-target_link_libraries(parser pyparser)
-install(TARGETS parser DESTINATION lib)
-# dynamic load one of the two previous module
-# need dependancy module / by functionality
 
-add_executable(osuxparser main.c  $<TARGET_OBJECTS:module>)
-target_link_libraries(osuxparser parser beatmap )
+add_library(parser OBJECT
+  parser.c
+  parser.h
+  $<TARGET_OBJECTS:pyparser>  
+  )
+
+add_executable(osuxparser main.c
+  $<TARGET_OBJECTS:parser>
+  $<TARGET_OBJECTS:beatmap>
+  )
+
