--- a/ranking/taikorank/yaml/reading_cst.yaml
+++ b/ranking/taikorank/yaml/reading_cst.yaml
@@ -1,23 +1,20 @@
-# scale
+### scale
 vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
 vect_scale_x2: 10e+4.
 vect_scale_y2: 10.
 
-# object superposition
-superpos_big:   1.41 #sqrt(2)
-superpos_small: 1.
-
-# hide
+### hide
+monte_carlo_nb_pts: 5000
 # x is in ms
 vect_hide_length: 2
 vect_hide_x1: 0.
 vect_hide_y1: 0.
-vect_hide_x2: 50000.
-vect_hide_y2: 1000.
+vect_hide_x2: 50e+3.
+vect_hide_y2: 100.
 
-# fast
+### fast
 # x is in ms
 vect_fast_length: 2
 vect_fast_x1: 0.
@@ -25,14 +22,14 @@ vect_fast_y1: 1000.
 vect_fast_x2: 5000.
 vect_fast_y2: 0.
 
-# speed change
+### speed change
 speed_ch_max:     1000000
 speed_ch_time_0:  1000.
 speed_ch_value_0: 0.000000001
 
-# coeff for star
+### coeff for star
 star_superpos: 0   
 star_hide:     0   
-star_hidden:   0   
+star_hidden:   0.7
 star_speed_ch: 0   
-star_fast:     1.
+star_fast:     0.4
