--- a/src/replay/Makefile.am
+++ b/src/replay/Makefile.am
@@ -4,12 +4,13 @@ libreplay_la_SOURCES = \
 	replay.c \
 	xz_decomp.c
 
-libreplay_la_LIBADD = ../util/libutil.la
-libreplay_la_LDFLAGS = -llzma
+libreplay_la_LIBADD = ../util/libosux_util.la ../mod/libmod.la
+libreplay_la_CFLAGS = $(LZMA_CFLAGS) $(AM_CFLAGS)
+libreplay_la_LDFLAGS = $(LZMA_LIBS) $(AM_LDFLAGS)
 
 bin_PROGRAMS = parse_replay
 
 parse_replay_SOURCES = \
 	main.c
 
-parse_replay_LDADD = ../mod/libmod.la libreplay.la
+parse_replay_LDADD = libreplay.la
