change options and add some. Update license in taikorank.

--- a/ranking/taikorank/CMakeLists.txt
+++ b/ranking/taikorank/CMakeLists.txt
@@ -23,7 +23,7 @@ set(tr_src
   )
 
 add_executable(taiko_ranking ${tr_src})
-target_link_libraries(taiko_ranking parser replay m util mysqlclient)
+target_link_libraries(taiko_ranking parser m util mysqlclient)
 
 include_directories(. compute_star)
 
