--- a/src/beatmap/parser/Makefile.am
+++ b/src/beatmap/parser/Makefile.am
@@ -4,3 +4,6 @@ noinst_LTLIBRARIES = libpyparser.la libparser.la
 libparser_la_SOURCES = parser.c
 libpyparser_la_SOURCES = pyfetch.c
 
+libparser_la_LIBADD = libpyparser.la
+
+dist_python_DATA = osux_parse.py
