--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -13,7 +13,7 @@ libosux_util_la_SOURCES = \
 	sum.c \
 	data.c 
 
-libosux_util_la_CFLAGS = $(YAML_CFLAGS) $(AM_CFLAGS) \
-	-DPKG_DATA_DIR=\"$(pkgdatadir)\"
-
+libosux_util_la_CFLAGS = $(YAML_CFLAGS) $(AM_CFLAGS)
 libosux_util_la_LDFLAGS = $(YAML_LIBS) $(AM_LDFLAGS)
+
+dist_python_DATA = osux_util.py
