--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -11,9 +11,10 @@ libosux_util_la_SOURCES = \
 	uleb128.c \
 	re.c \
 	sum.c \
-	data.c 
+	data.c \
+	md5.c
 
-libosux_util_la_CFLAGS = $(YAML_CFLAGS) $(AM_CFLAGS)
-libosux_util_la_LDFLAGS = $(YAML_LIBS) $(AM_LDFLAGS)
+libosux_util_la_CFLAGS = $(YAML_CFLAGS) $(AM_CFLAGS) $(CRYPTO_CFLAGS)
+libosux_util_la_LDFLAGS = $(YAML_LIBS) $(AM_LDFLAGS) $(CRYPTO_LIBS)
 
 dist_python_DATA = osux_util.py
