--- a/src/replay/Makefile.am
+++ b/src/replay/Makefile.am
@@ -4,7 +4,7 @@ libreplay_la_SOURCES = \
 	replay.c \
 	xz_decomp.c
 
-libreplay_la_LIBADD = ../util/libosux_util.la ../mod/libmod.la
+libreplay_la_LIBADD = ../util/libosux_util.la
 libreplay_la_CFLAGS = $(LZMA_CFLAGS) $(AM_CFLAGS)
 libreplay_la_LDFLAGS = $(LZMA_LIBS) $(AM_LDFLAGS)
 
@@ -13,4 +13,4 @@ bin_PROGRAMS = parse_replay
 parse_replay_SOURCES = \
 	main.c
 
-parse_replay_LDADD = libreplay.la
+parse_replay_LDADD = libreplay.la ../mod/libmod.la
