--- a/src/database/Makefile.am
+++ b/src/database/Makefile.am
@@ -3,6 +3,12 @@ include $(top_srcdir)/common.mk
 noinst_LTLIBRARIES = libosux_db.la
 libosux_db_la_SOURCES = osuxdb.c
 
-#libosux_la_CFLAGS = $(PYTHON2_CFLAGS) $(AM_CFLAGS) -DPYTHON_PATH=\"$(pythondir)\"
-#libosux_la_LDFLAGS = $(PYTHON2_LIBS) $(AM_LDFLAGS)
+libosux_db_la_LIBADD = ../util/libosux_util.la
+
+bin_PROGRAMS = makedb readdb
+makedb_SOURCES = makedb.c
+makedb_LDADD = libosux_db.la
+
+readdb_SOURCES = readdb.c
+readdb_LDADD = libosux_db.la
 
