--- a/src/ranking/taikorank/Makefile.am
+++ b/src/ranking/taikorank/Makefile.am
@@ -17,7 +17,8 @@ taiko_ranking_SOURCES = \
 	config.c \
 	options.c \
 	cst_yaml.c \
-	vector.c 
+	vector.c \
+	spacing_count.c
 
 taiko_ranking_LDADD = ../../libosux.la ../../util/libosux_util.la compute_star/libtr_star.la
 taiko_ranking_CFLAGS = -I $(srcdir)/compute_star $(AM_CFLAGS)
