--- a/src/ranking/taikorank/yaml/reading_cst.yaml
+++ b/src/ranking/taikorank/yaml/reading_cst.yaml
@@ -5,8 +5,17 @@ vect_scale_y1: 0.
 vect_scale_x2: 10e+4.
 vect_scale_y2: 10.
 
-### hide
 monte_carlo_nb_pts: 5000
+
+### seen 
+# x is in ms
+vect_seen_length: 2
+vect_seen_x1: 0.
+vect_seen_y1: 5e+2.
+vect_seen_x2: 10e+8.
+vect_seen_y2: 0.
+
+### hide
 # x is in ms
 vect_hide_length: 2
 vect_hide_x1: 0.
@@ -29,7 +38,8 @@ speed_ch_value_0: 0.000000001
 
 ### coeff for star
 star_superpos: 0   
+star_seen:     0.
 star_hide:     0   
-star_hidden:   0.4
+star_hidden:   0.7
 star_speed_ch: 0   
-star_fast:     0.7
+star_fast:     0.4
