--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,8 @@ AC_CONFIG_HEADERS([config.h])
 PKG_CHECK_MODULES(PYTHON2, python2) 
 PKG_CHECK_MODULES(YAML, yaml-0.1) 
 PKG_CHECK_MODULES(LZMA, liblzma) 
-PKG_CHECK_MODULES(CRYPTO, libcrypto) 
+PKG_CHECK_MODULES(CRYPTO, libcrypto)
+PKG_CHECK_MODULES(SQLITE, sqlite3) 
 
 AC_CONFIG_FILES([
 		  Makefile
