--- a/src/ranking/taikorank/Makefile.am
+++ b/src/ranking/taikorank/Makefile.am
@@ -20,7 +20,10 @@ taiko_ranking_SOURCES = \
 	vector.c \
 	spacing_count.c
 
-taiko_ranking_LDADD = ../../libosux.la ../../util/libosux_util.la compute_star/libtr_star.la
+taiko_ranking_LDADD = ../../libosux.la \
+		../../util/libosux_util.la \
+		compute_star/libtr_star.la
+
 taiko_ranking_CFLAGS = -I $(srcdir)/compute_star $(AM_CFLAGS)
 taiko_ranking_LDFLAGS = -pthread -lmysqlclient -lm $(AM_LDFLAGS)
 
