--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_INIT([osux], [0.1], [lmaugere@ipb.fr, tmijieux@ipb.fr])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AM_SILENT_RULES([yes])
 AM_PROG_AR
-LT_INIT
+LT_INIT([dlopen disable-static])
 AC_CONFIG_MACRO_DIRS([m4])
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
@@ -16,6 +16,7 @@ PKG_CHECK_MODULES(SQLITE, sqlite3)
 AC_CONFIG_FILES([
 		  Makefile
 		  src/Makefile
+                  src/python/Makefile
 		  src/util/Makefile
 		  src/beatmap/Makefile
 		  src/mod/Makefile
