--- a/taikorank/yaml/accuracy_cst.yaml
+++ b/taikorank/yaml/accuracy_cst.yaml
@@ -15,11 +15,18 @@ vect_slow_y2: 0.
 
 ### spacing
 # x is in ms
-vect_spacing_length: 2
-vect_spacing_x1: 0.
-vect_spacing_y1: 1000.
-vect_spacing_x2: 10000.
-vect_spacing_y2: 0.
+vect_spacing_influence_length: 2
+vect_spacing_influence_x1: 0.
+vect_spacing_influence_y1: 1000.
+vect_spacing_influence_x2: 10000.
+vect_spacing_influence_y2: 0.
+
+# x is in [0, 1]
+vect_spacing_frequency_length: 2
+vect_spacing_frequency_x1: 0.
+vect_spacing_frequency_y1: 1.
+vect_spacing_frequency_x2: 1.
+vect_spacing_frequency_y2: 0.
 
 ### hit_window
 # x is in ms
