--- a/taikorank/yaml/accuracy_cst.yaml
+++ b/taikorank/yaml/accuracy_cst.yaml
@@ -2,7 +2,7 @@
 vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
-vect_scale_x2: 7e4.
+vect_scale_x2: 1e3.
 vect_scale_y2: 10.
 
 ### slow
@@ -17,9 +17,9 @@ vect_slow_y2: 0.
 # x is in ms
 vect_spacing_influence_length: 2
 vect_spacing_influence_x1: 0.
-vect_spacing_influence_y1: 1000.
-vect_spacing_influence_x2: 10000.
-vect_spacing_influence_y2: 0.
+vect_spacing_influence_y1: 1e3.
+vect_spacing_influence_x2: 1e4.
+vect_spacing_influence_y2: 1e-5
 
 # x is in [0, 1]
 vect_spacing_frequency_length: 2
