--- a/taikorank/yaml/final_cst.yaml
+++ b/taikorank/yaml/final_cst.yaml
@@ -1,6 +1,14 @@
+# influence
+# x is in ms
+vect_influence_length: 2
+vect_influence_x1: 0.
+vect_influence_y1: 1.
+vect_influence_x2: 500
+vect_influence_y2: 10e-3.
+
 # scale
 vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
-vect_scale_x2: 20e-4
-vect_scale_y2: 10.
+vect_scale_x2: 1e4
+vect_scale_y2: 100.
