--- a/taikorank/yaml/accuracy_cst.yaml
+++ b/taikorank/yaml/accuracy_cst.yaml
@@ -3,23 +3,29 @@ vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
 vect_scale_x2: 1e3.
-vect_scale_y2: 10.
+vect_scale_y2: 20.
 
 ### slow
 # x is in bpm app
-vect_slow_length: 2
+vect_slow_length: 4
 vect_slow_x1: 0.
 vect_slow_y1: 1000.
-vect_slow_x2: 140.
-vect_slow_y2: 0.
+vect_slow_x2: 70.
+vect_slow_y2: 300.
+vect_slow_x3: 140.
+vect_slow_y3: 0.
+vect_slow_x4: 10000.
+vect_slow_y4: 0.
 
 ### spacing
 # x is in ms
-vect_spacing_influence_length: 2
+vect_spacing_influence_length: 3
 vect_spacing_influence_x1: 0.
-vect_spacing_influence_y1: 1e3.
-vect_spacing_influence_x2: 1e4.
-vect_spacing_influence_y2: 1e-5
+vect_spacing_influence_y1: 1000.
+vect_spacing_influence_x2: 5000.
+vect_spacing_influence_y2: 0
+vect_spacing_influence_x3: 3600000.
+vect_spacing_influence_y3: 0
 
 # x is in [0, 1]
 vect_spacing_frequency_length: 2
@@ -30,13 +36,15 @@ vect_spacing_frequency_y2: 0.
 
 ### hit_window
 # x is in ms
-vect_hit_window_length: 2
+vect_hit_window_length: 3
 vect_hit_window_x1: 20.
 vect_hit_window_y1: 1000.
 vect_hit_window_x2: 150.
-vect_hit_window_y2: 10e-2.
+vect_hit_window_y2: 0.
+vect_hit_window_x3: 3600000.
+vect_hit_window_y3: 0.
 
 ### coeff for star
-star_slow:       0.4
-star_hit_window: 0.6
-star_spacing:    0.
+star_slow:       0.1
+star_hit_window: 0.1
+star_spacing:    1.
