--- a/taikorank/yaml/density_cst.yaml
+++ b/taikorank/yaml/density_cst.yaml
@@ -2,15 +2,19 @@
 vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
-vect_scale_x2: 1e5.
-vect_scale_y2: 10.
+vect_scale_x2: 1e4.
+vect_scale_y2: 20.
 
 # coeff for density
-vect_density_length: 2
+vect_density_length: 4
 vect_density_x1: 0.
-vect_density_y1: 1e2.
-vect_density_x2: 5000.
-vect_density_y2: 1e-5.
+vect_density_y1: 100.
+vect_density_x2: 4000.
+vect_density_y2: 10.
+vect_density_x3: 10000.
+vect_density_y3: 0.
+vect_density_x4: 3600000.
+vect_density_y4: 0.
 
 # coefficient for object type, 1 is the maximum
 density_normal: 1.
