--- a/taikorank/yaml/final_cst.yaml
+++ b/taikorank/yaml/final_cst.yaml
@@ -1,14 +1,22 @@
 # influence
 # x is in ms
-vect_influence_length: 2
+vect_influence_length: 3
 vect_influence_x1: 0.
 vect_influence_y1: 1.
-vect_influence_x2: 500
-vect_influence_y2: 10e-3.
+vect_influence_x2: 1500.
+vect_influence_y2: 0.
+vect_influence_x3: 3600000.
+vect_influence_y3: 0.
 
 # scale
 vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
-vect_scale_x2: 1e4
-vect_scale_y2: 100.
+vect_scale_x2: 16e4.
+vect_scale_y2: 20.
+
+### pow
+density_pow:  1
+reading_pow:  0
+pattern_pow:  0
+accuracy_pow: 1
