--- a/taikorank/yaml/pattern_cst.yaml
+++ b/taikorank/yaml/pattern_cst.yaml
@@ -2,16 +2,20 @@
 vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
-vect_scale_x2: 1e+2.
-vect_scale_y2: 10.
+vect_scale_x2: 1e2.
+vect_scale_y2: 20.
 
 # coeff for singletap proba
 # x is in ms
-vect_singletap_length: 2
-vect_singletap_x1: 20.
+vect_singletap_length: 4
+vect_singletap_x1: 0.
 vect_singletap_y1: 0.
-vect_singletap_x2: 500.
-vect_singletap_y2: 1.
+vect_singletap_x2: 20.
+vect_singletap_y2: 0.
+vect_singletap_x3: 1000.
+vect_singletap_y3: 1.
+vect_singletap_x4: 3600000. #1h should be fine enough
+vect_singletap_y4: 1.
 # 160ms ~ 180bpm 1/2
 # 125ms = 240bpm 1/2
 
@@ -29,8 +33,8 @@ max_pattern_length:  4
 length_pattern_used: 2
 patterns :
   # 1 pattern
-  - [d, 0.2, 0.0]
-  - [k, 0.2, 0.0]  
+  - [d, 0.2, infinity]
+  - [k, 0.2, infinity]
   # 2 pattern
   - [dd, 1.0, 1.8]
   - [dk, 1.5, 3.0]
